--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+	<title>首页测试</title>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstap.min.css">
+</head>
+<body>
+<div>
+<H1>网站首页测试</H1>
+<H2>网站首页测试</H2>
+<H3>网站首页测试</H3>
+<H4>网站首页测试</H4>
+<H5>网站首页测试</H5>
+</div>
+
+</body>
+</html>
